@@ -223,6 +223,19 @@ function(file, pdf = FALSE, clean = FALSE,
         } else {
             extra <- quiet <- ""
         }
+        if(.Platform$OS.type == "windows") {
+            ## look for MiKTeX (which this almost certainly is)
+            ## and set the path to R's style files.
+            ## -I works in MiKTeX >= 2.4, at least
+            ver <- system(paste(shQuote(texi2dvi), "--version"), intern = TRUE)
+            if(length(grep("MiKTeX", ver[1]))) {
+                ## could use shortPathName here
+                stypath <-  shQuote(gsub("\\\\", "/",
+                                         file.path(R.home("share"), "texmf")))
+                clean <- paste(clean, "-I", stypath)
+            }
+        }
+        ## print(paste(shQuote(texi2dvi), quiet, pdf, clean, shQuote(file), extra))
         if(system(paste(shQuote(texi2dvi), quiet, pdf, clean,
                         shQuote(file), extra),
                   ignore.stderr = ignore.stderr))
@@ -348,7 +361,7 @@ function(con)
     ind <- seq.int(from = 3L, length.out = pos[1L] - 3L)
     lines[ind]
 }
-    
+
 ### ** .get_LaTeX_errors_from_log_file
 
 .get_LaTeX_errors_from_log_file <-
